# HMCppPracticeCode

./: .gitignore  CMakeLists.txt  README.md
files/: person.txt
src/p002/: main.cpp
src/p003/: main.cpp
src/p004/: main.cpp
src/p005/: main.cpp
src/p009/: main.cpp
src/p013/: main.cpp
src/p015/: main.cpp
src/p024/: main.cpp
src/p030/: main.cpp
src/p031/: main.cpp
src/p032/: main.cpp
src/p033/: main.cpp
src/p034/: main.cpp
src/p035/: main.cpp
src/p038/: main.cpp
src/p041/: main.cpp
src/p042/: main.cpp
src/p045/: main.cpp
src/p046/: main.cpp
src/p049/: main.cpp
src/p050/: main.cpp
src/p055/: main.cpp  swap.cpp  swap.h
src/p056/: main.cpp
src/p062/: main.cpp
src/p063/: main.cpp
src/p064/: main.cpp
src/p065/: main.cpp
src/p066/: main.cpp
src/p067/: main.cpp
src/p068/: main.cpp
src/p069/: main.cpp
src/p071/: main.cpp
src/p072/: main.cpp
src/p084/: main.cpp
src/p085/: main.cpp
src/p089/: main.cpp
src/p094/: main.cpp
src/p095/: main.cpp
src/p096/: main.cpp
src/p097/: main.cpp
src/p098/: main.cpp
src/p099/: main.cpp
src/p100/: main.cpp
src/p101/: main.cpp
src/p104/: main.cpp
src/p105/: circle.cpp  circle.h  main.cpp  point.cpp  point.h
src/p106/: main.cpp
src/p107/: main.cpp
src/p108/: main.cpp
src/p109/: main.cpp
src/p110/: main.cpp
src/p111/: main.cpp
src/p113/: main.cpp
src/p114/: main.cpp
src/p116/: main.cpp
src/p117/: main.cpp
src/p118/: main.cpp
src/p120/: main.cpp
src/p121/: main.cpp
src/p122/: main.cpp
src/p123/: main.cpp
src/p124/: main.cpp
(+20 files in other folders)
