cmake_minimum_required(VERSION 3.24)
project(HMCppPracticeCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(p002
        src/p002/main.cpp)
add_executable(p003
        src/p003/main.cpp)
add_executable(p004
        src/p004/main.cpp)
add_executable(p005
        src/p005/main.cpp)
add_executable(p009
        src/p009/main.cpp)
add_executable(p013
        src/p013/main.cpp)
