cmake_minimum_required(VERSION 3.24)
project(HMCppPracticeCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(p002
        src/p002/main.cpp)
add_executable(p003
        src/p003/main.cpp)
add_executable(p004
        src/p004/main.cpp)
add_executable(p005
        src/p005/main.cpp)
add_executable(p009
        src/p009/main.cpp)
add_executable(p013
        src/p013/main.cpp)
add_executable(p015
        src/p015/main.cpp)
add_executable(p024
        src/p024/main.cpp)
add_executable(p030
        src/p030/main.cpp)
add_executable(p031
        src/p031/main.cpp)
add_executable(p032
        src/p032/main.cpp)
add_executable(p033
        src/p033/main.cpp)
add_executable(p034
        src/p034/main.cpp)
add_executable(p035
        src/p035/main.cpp)
add_executable(p038
        src/p038/main.cpp)
add_executable(p041
        src/p041/main.cpp)